--- a/package.json
+++ b/package.json
@@ -24,5 +24,8 @@
     "ionic-plugin-deploy",
     "phonegap-plugin-push"
   ],
-  "cordovaPlatforms": []
+  "cordovaPlatforms": [
+    "ios",
+    "android"
+  ]
 }
