--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "cordova-plugin-statusbar",
     "ionic-plugin-keyboard",
     "ionic-plugin-deploy",
-    "phonegap-plugin-push"
+    "phonegap-plugin-push",
+    "org.apache.cordova.camera"
   ],
   "cordovaPlatforms": [
     "ios",
