--- a/bower.json
+++ b/bower.json
@@ -8,6 +8,7 @@
     "angular": "1.4.8"
   },
   "dependencies": {
-    "ion-autocomplete": "~0.3.1"
+    "ion-autocomplete": "~0.3.1",
+    "angular-guid": "~0.1.1"
   }
 }
