--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,8 @@
     "ionic": "driftyco/ionic-bower#1.2.4"
   },
   "resolutions": {
-    "angular": "1.4.8"
+    "angular": "^1.4.8",
+    "angular-animate": "^1.4.8"
   },
   "dependencies": {
     "ion-autocomplete": "~0.3.1",
